# comp0250_s26_labs

./: README.md
src/panda_description/launch/: description.launch
src/panda_description/sdf/: empty_panda.world  empty_panda_noShadow.world
src/panda_description/xacro/: panda.gazebo.xacro
src/panda_moveit_config/launch/: sensor_manager.launch.xml
src/sample/: CMakeLists.txt  README.txt  package.xml
src/sample/config/: params.yaml
src/sample/launch/: sample.launch
src/sample/src/: sample.cpp  sample_client.cpp  sample_listener.cpp  sample_server.cpp  sample_talker.cpp  test_sample.cpp
